Source/WebKit/UIProcess/WebProcessProxy.h
@@ -691,9 +691,6 @@ private:
 
     VisibleWebPageCounter m_visiblePageCounter;
     RefPtr<WebsiteDataStore> m_websiteDataStore;
-#if PLATFORM(COCOA)
-    RefPtr<NetworkProcessProxy> m_networkProcessToKeepAliveUntilDataStoreIsCreated;
-#endif
 
     bool m_isUnderMemoryPressure { false };
 
